deploy/announcement_service_depl.yml
# contains a deployment, a service and a hpa for the announcement service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment-ann
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-announc-serv
  template:
    metadata:
      labels:
        app: pn-announc-serv
    spec:
      containers:
        - name: kubernetes-cgs-announc
          image: micpn.azurecr.io/announcementservice:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service-ann
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8082
      protocol: TCP
  selector:
    app: pn-announc-serv
