deploy/kafka_ui_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-kafka-ui
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  type: LoadBalancer
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
