deploy/message_service_depl.yml
# contains a deployment, a service and a hpa for the message service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment-mess
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-message-serv
  template:
    metadata:
      labels:
        app: pn-message-serv
    spec:
      containers:
        - name: kubernetes-cgs-message
          image: micpn.azurecr.io/messageservice:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service-mess
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8085
      protocol: TCP
  selector:
    app: pn-message-serv
