deploy/orchestrator_depl.yml
# contains a deployment, a service and a hpa for the orchestrator service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment-orch
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-orchestrator-serv
  template:
    metadata:
      labels:
        app: pn-orchestrator-serv
    spec:
      containers:
        - name: kubernetes-cgs-orchestrator
          image: micpn.azurecr.io/orchestrator:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service-orch
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8086
      protocol: TCP
  selector:
    app: pn-orchestrator-serv
