deploy/order_service_depl.yml
# contains a deployment, a service and a hpa for the order service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment-ord
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-order-serv
  template:
    metadata:
      labels:
        app: pn-order-serv
    spec:
      containers:
        - name: kubernetes-cgs-order
          image: micpn.azurecr.io/orderservice:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service-ord
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8083
      protocol: TCP
  selector:
    app: pn-order-serv
