deploy/user_service_depl.yml
# contains a deployment, a service and a hpa for the user service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment-user
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-user-serv
  template:
    metadata:
      labels:
        app: pn-user-serv
    spec:
      containers:
        - name: kubernetes-cgs-user
          image: micpn.azurecr.io/userservice:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service-user
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
  selector:
    app: pn-user-serv
