deploy/websocket_service_depl.yml
# contains a deployment, a service and a hpa for the websocket service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment-webs
  labels:
    owner: pn
    app: kubernetes-cgs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-websocket-serv
  template:
    metadata:
      labels:
        app: pn-websocket-serv
    spec:
      containers:
        - name: kubernetes-cgs-websocket
          image: micpn.azurecr.io/websocketservice:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service-webs
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8084
      protocol: TCP
  selector:
    app: pn-websocket-serv
